tests/ui/duplicate-enum-source.stderr
error: duplicate #[source] attribute
 --> $DIR/tests/ui/duplicate-enum-source.rs:8:9
  |
8 |         #[source]
  |         ^^^^^^^^^
